# congress-mirror-bot

./: .env.example  .gitignore  Dockerfile  README.md  fly.toml  pyproject.toml
deploy/: congress-mirror-bot.service
src/congress_bot/: __init__.py  cli.py  config.py  disclosures.py  executor.py  notify.py  portfolio.py  pricing.py  ranking.py  scheduler.py  store.py
tests/: conftest.py  test_config_and_store.py  test_disclosures.py  test_executor.py  test_notify.py  test_portfolio.py  test_ranking.py
